<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/linearLayout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/button3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/connect" />

            <Button
                android:id="@+id/button4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/cancel" />
        </LinearLayout>

        <Spinner
            android:id="@+id/spinner1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:listitem="@android:layout/simple_selectable_list_item" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignLeft="@+id/linearLayout2"
        android:layout_alignTop="@+id/linearLayout2"
        android:gravity="center_vertical"
        android:orientation="vertical" >

        <GridLayout
            android:id="@+id/gridLayout1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:columnCount="4" >

            <Button
                android:id="@+id/button2"
                android:layout_column="3"
                android:layout_gravity="left|top"
                android:layout_row="1"
                android:text="@string/right_arrow"
                android:textSize="50sp" />

            <Button
                android:id="@+id/button5"
                android:layout_column="1"
                android:layout_gravity="left|top"
                android:layout_row="1"
                android:text="@string/left_arrow"
                android:textSize="50sp" />

            <Button
                android:id="@+id/button1"
                android:layout_column="2"
                android:layout_gravity="center_horizontal|top"
                android:layout_row="0"
                android:text="@string/up_arrow"
                android:textSize="50sp" />

            <Button
                android:id="@+id/button6"
                android:layout_column="2"
                android:layout_gravity="center_horizontal|top"
                android:layout_row="2"
                android:text="@string/down_arrow"
                android:textSize="50sp" />
        </GridLayout>
    </LinearLayout>

</RelativeLayout>